--- a/front/package.json
+++ b/front/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "next": "^10.0.4",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
+    "react-redux": "^7.2.2",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.3"
   },
