--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^7.2.2",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
-    "styled-reset": "^4.3.3"
+    "styled-reset": "^4.3.3",
+    "swr": "^0.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
