--- a/back/package.json
+++ b/back/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.824.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "colorthief": "^2.3.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
@@ -22,7 +22,9 @@
     "express-useragent": "^1.0.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
+    "node-vibrant": "^3.2.1-alpha.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5",
