--- a/front/package.json
+++ b/front/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 3000"
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production next start -p 3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@next/bundle-analyzer": "^10.0.5",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "next": "^10.0.4",
     "next-redux-wrapper": "^6.0.2",
     "pm2": "^4.5.1",
