--- a/front/package.json
+++ b/front/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 3000"
+    "build": "NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start -p 3000"
   },
   "keywords": [],
   "author": "",
